tests/ui/borrowck/alias-liveness/gat-outlives-env.polonius_alpha.stderr
error[E0499]: cannot borrow `t` as mutable more than once at a time
  --> $DIR/gat-outlives-env.rs:44:13
   |
LL |     let a = t.changes(static_unit);
   |             - first mutable borrow occurs here
LL |     let b = t.changes(static_unit);
   |             ^ second mutable borrow occurs here
LL | }
   | - first borrow might be used here, when `a` is dropped and runs the destructor for type `<T as Updater>::Changes<'_, '_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
